--- a/app/src/main/res/layout/activity_menu__configuracion.xml
+++ b/app/src/main/res/layout/activity_menu__configuracion.xml
@@ -1,9 +1,10 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/Menu_configuracion"
-    tools:context="com.example.miguelangel.savenergy.Menu_configuracion">
+    tools:context="com.example.miguelangel.savenergy.Menu_Configuraciones">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +34,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:onClick=""
             android:text="Cambiar Contraseña" />
 
 
@@ -45,4 +45,4 @@
             android:text="Cambiar tipo de Tarifa y corte" />
     </LinearLayout>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
