--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
     <style name="Button_style" parent="Theme.AppCompat.Light">
         <item name="colorControlHighlight">@color/colorPrimary</item>
         <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="android:textColor">@color/buttonText</item>
     </style>
 
     <!-- Estilos de la toolbar-->
@@ -48,7 +49,6 @@
     <!-- Mensaje de error debajo del EditText-->
     <style name="AppTheme.EditTextError" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/error_validacion</item>
-
     </style>
 
 
