--- a/app/src/main/res/layout/activity_configuracion__perfil.xml
+++ b/app/src/main/res/layout/activity_configuracion__perfil.xml
@@ -6,32 +6,45 @@
     android:layout_height="match_parent"
     tools:context="com.example.miguelangel.savenergy.Configuracion_Perfil">
 
+                <!--Declaración de ScrollView en interfaz -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
+                <!-- Inicio del contenedor principal -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:focusableInTouchMode="true"
+            android:padding="15dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iv_user_pic"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:src="@mipmap/ic_launcher_round" />
-
-            <Button
-                android:id="@+id/btn_cambiar_foto"
-                android:layout_width="wrap_content"
+                <!-- Inicio del contenedor de la cabecera -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="8dp"
-                android:padding="15dp"
-                android:text="@string/foto" />
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_user_pic"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@mipmap/ic_launcher_round" />
+
+                <Button
+                    android:id="@+id/btn_cambiar_foto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="8dp"
+                    android:padding="15dp"
+                    android:text="@string/foto"
+                    android:theme="@style/Button_style"/>
+
+            </LinearLayout>
+                <!-- Fin del contenedor de la cabecera -->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,52 +58,48 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/nombre"
-                    android:textColor="#000" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <EditText
                     android:id="@+id/et_nombre"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="true"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="" />
+                    android:textColor="@color/colorPrimary"/>
 
                 <TextView
                     android:id="@+id/txt_correo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/correo_electronico"
-                    android:textColor="#000" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <EditText
                     android:id="@+id/et_correo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="true"
                     android:ems="10"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName"
+                    android:textColor="@color/colorPrimary"/>
 
                 <TextView
                     android:id="@+id/txt_tarifa"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/tarifa"
-                    android:textColor="#000" />
+                    android:textColor="@color/colorPrimaryDark" />
 
                 <EditText
                     android:id="@+id/et_tarifa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    android:text="" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
+                    android:textColor="@color/colorPrimary"/>
                 <Button
                     android:id="@+id/btn_guardar"
                     android:layout_width="wrap_content"
@@ -98,9 +107,12 @@
                     android:layout_gravity="bottom|right"
                     android:layout_margin="8dp"
                     android:padding="15dp"
-                    android:text="@string/guardar" />
+                    android:text="@string/guardar"
+                    android:theme="@style/Button_style"/>
             </LinearLayout>
         </LinearLayout>
+                <!-- Fin del contenedor principal -->
     </ScrollView>
+                <!-- Fin del ScrollView -->
 
 </android.support.constraint.ConstraintLayout>
