--- a/app/src/main/res/layout/activity_configuracion__perfil.xml
+++ b/app/src/main/res/layout/activity_configuracion__perfil.xml
@@ -9,7 +9,7 @@
                 <!--Declaración de ScrollView en interfaz -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="8dp">
 
                 <!-- Inicio del contenedor principal -->
