--- a/app/src/main/res/layout/activity_cambiar_contrasenia.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasenia.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.miguelangel.savenergy.Cambiar_contrasenia">
-
+            <!-- Contenedor general de la UI -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
